@@ -85,14 +85,35 @@ fs::absolute(const path& p, error_code& ec)
       ec = make_error_code(std::errc::no_such_file_or_directory);
       return ret;
     }
+  ec.clear();
+  if (p.is_absolute())
+    {
+      ret = p;
+      return ret;
+    }
+
 #ifdef _GLIBCXX_FILESYSTEM_IS_WINDOWS
-  const wstring& s = p.native();
+  wstring_view s = p.native();
+
+  if (p.has_root_directory()) // implies !p.has_root_name()
+    {
+      // GetFullPathNameW("//") gives unwanted result (PR 88884).
+      // If there are multiple directory separators at the start,
+      // skip all but the last of them.
+      const auto pos = s.find_first_not_of(L"/\\");
+      __glibcxx_assert(pos != 0);
+      s.remove_prefix(std::min(s.length(), pos) - 1);
+    }
+
+  // s must be null-terminated
+  __glibcxx_assert(!s.empty() && s.back() == 0);
+
   uint32_t len = 1024;
   wstring buf;
   do
     {
       buf.resize(len);
-      len = GetFullPathNameW(s.c_str(), len, buf.data(), nullptr);
+      len = GetFullPathNameW(s.data(), len, buf.data(), nullptr);
     }
   while (len > buf.size());
 
@@ -100,13 +121,11 @@ fs::absolute(const path& p, error_code& ec)
     ec.assign((int)GetLastError(), std::system_category());
   else
     {
-      ec.clear();
       buf.resize(len);
       ret = std::move(buf);
     }
 #else
-  ec.clear();
-  ret = current_path();
+  ret = current_path(ec);
   ret /= p;
 #endif
   return ret;
